--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-* {
+html {
   color: white;
 }
 
@@ -7,4 +7,8 @@
   display: flex;
   flex-direction: column;
   background-color: #282c34;
+}
+
+[aria-current='page'] {
+  background-color: tomato;
 }
