--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,3 @@
-html {
-  color: white;
-  background-color: #282c34;
-}
-
 .App {
   min-height: 100vh;
   display: flex;
@@ -10,5 +5,10 @@ html {
 }
 
 [aria-current='page'] {
-  background-color: #4ababa;
+  background-color: #0f4c75;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
