--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+*:focus {
+  /* outline: none; */
+  box-shadow: 0 0 0 4px rgba(21, 156, 228, 0.4);
+}
